2005-01-18 Eero Tamminen <eerot@sf>
	* src/plugins/GraphViz.py:
	  - Content options are now on the Report tab, Layout/looks
	    options are left to GraphViz tab
	  - Remade option lists, there's now a new class that keeps them
	  - Moved lists from different places in code to the new class
	  - Added 'rankdir' option for graph direction and 'latin'
	    option for fonts (visible only on command line, in GUI
	    it's taken from selected font and set whether labels need
	    utf8->latin1 conversion)
	  - Changed 'colorize' option to support color filling in
	    addition to just outline color (nicer for on-screen docs)
	  - Changed the options defaults slightly (e.g. "Default" font
	    is now default, this is a bit contraversial)
	  - Non-blood relation line changed from dashed to dotted
	  - Changed three option names to be more understandable:
	    - sfn -> showfamilies
	    - repb -> placecause
	    - incda -> incdate

2005-01-18 Alex Roitman  <shura@alex.neuro.umn.edu>
	* NEWS: Correct attribution of ini-backend.
	* configure.in: bump up the version number.

	* src/DateDisplay.py: Move common objects back to DateDisplay class.
	* src/dates/Date_ru.py: Add formats and quality.

2005-01-17  Don Allingham  <dallingham@users.sourceforge.net>
	* src/ReportUtils.py: Added
	* src/BaseDoc.py: support for graphs
	* src/docgen/OpenOfficeDoc.py: write_at support
	* src/Makefile.am: added ReportUtils.py

2005-01-17  Don Allingham  <dallingham@users.sourceforge.net>
	* Release: Version 1.1.3 "Splunge: this is a greate idea, but 
	possibly lousy, and I'm not being indecisive" released.

2005-01-17  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/ReadGedcom.py: Handle missing TRLR record.

2005-01-17 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/GraphViz.py: Remove bogus UI labels.

2005-01-16 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/Plugins.py (reload_plugins): Check for status.
	* src/Report.py: pychecker fixes